--- a/changeLog
+++ b/changeLog
@@ -3,6 +3,7 @@ Changelog for GEMC
 
 5/16/16
  - defaults to hit definitions if file is not found
+ - added kaon0LInelastic process catalogue - re-ordered to put kaons together
 
 5/13/16
  - added low em physics process (code LEM)
